--- a/TakeHome.org
+++ b/TakeHome.org
@@ -164,7 +164,7 @@ Un altro aspetto di valutazione degli algoritmi, è quanto siano sensibili ai di
 
 Nel paper proposto viene messo sotto analisi quanto gli algoritmi per MAB siano robusti rispetto a piccole perturbazioni nei dati e vengono forniti degli algoritmi attaccanti che riescono a manipolare il comportamento dell'algoritmo MAB portandolo a scegliere una scelta sub-ottima scelta a piacere dall'attaccante. Gli algoritmi proposti sono: sia per la versione offline sia per la versione online del problema MAB. Il contributo portato da chi sta scrivendo il testo è stato mostrare la bontà degli algoritmi forniti anche in situazioni differenti da quelle studiate, in particolare si analizza la situazione denominata /Multi-Batch/, verrà inoltre introdotta una variante all'algoritmo \epsilon-greedy, verrà modificata la distribuzione dei reward, è verrà adoperato un attacco al problema MAB che sfrutta l'algoritmo /BaSE/ (BAtch Succesive Eliminatios). Seppure in letteratura possiamo trovare studi che forniscono modelli di difesa agli attacchi provocati da una manipolazione nei dati di training (ad es: [GTK19] e [LMP18]) perdendo in prestazioni, Fang Liu e Ness Shroff dimostrano che non esistono algoritmi immuni da /Data Poisoning Attacks/ rispetto alla strategia da loro proposta nella configurazione MAB-offline. 
 * Studi Correlati 
-In questa sezione vengono riportati gli studi citati dal paper di tutti è stato letto l'abstract, nel caso in cui siano stati necessari ulteriori chiarimenti sono state lette anche le sezioni di interesse. 
+In questa sezione vengono riportati gli studi citati dal paper, di tutti è stato letto l'abstract, nel caso in cui siano stati necessari ulteriori chiarimenti sono state lette anche le sezioni di interesse. 
 
 *[AZB16] Scott Alfeld, Xiaojin Zhu e Paul Barford: Data poisoning attacks against autoregressive models. n /AAAI/, pp. 1452–1458, 2016.*
 
